[#466644]Fix horizontal scrollbar in collection

--- a/resources/styles/list.css
+++ b/resources/styles/list.css
@@ -742,18 +742,6 @@ tr.dragover td{
     display: block;
     width: 100%;
 }
-/* fix for EDGE  */
-@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
-    .grid-table-wrapper {
-        /*display: ruby-base;*/
-        overflow: hidden;
-        min-height: 62px;
-    }
-    .top-nav .grid-table-wrapper {
-        overflow: inherit;
-        min-height: auto;
-    }
-}
 
 .grid-table-wrapper-war {
     overflow: auto;
@@ -761,7 +749,6 @@ tr.dragover td{
     flex-shrink: 1;
     max-height: 100%;
 }
-
 
 .grid-label_tree-editor {
     margin-left: auto;
